fix(quality): score alignment

--- a/src/management/api/_api.scss
+++ b/src/management/api/_api.scss
@@ -392,7 +392,7 @@ md-switch.md-default-theme .md-bar, md-switch .md-bar {
   min-height: 30px;
   border: 2px solid;
   border-radius: 30px;
-  padding: 4px;
+  padding: 6px;
   margin: 4px 0;
   display: inline-block;
 }
